HPS-69 feat: update tests